# speedrun-bingo

./: Cargo.toml  README.md
src/: bingo.rs  generator.rs  lib.rs  renderer.rs  template.rs
src/seed_random/: arc4.rs  mod.rs
src/templates/: sm64.json
