[package]
name = "speedrun-bingo"
version = "0.1.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]

[dependencies]
serde_json = "1.0.2"
serde_derive = "1.0.6"
serde = "1.0.6"
rusttype = "0.2.1"
image = "0.13.0"
imageproc = { git = "https://github.com/PistonDevelopers/imageproc", rev = "3af8dd85a61cef51867c022a4a77c81ca9a774fb"}
